# mmcif-restore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mmcif_restore/: __init__.py  cli.py  restore.py  structure_info.py
src/mmcif_restore/sync/: __init__.py  _utils.py  chain.py  conn.py  entity.py  modres.py  scheme.py  stats.py
tests/: conftest.py  test_cli.py  test_restore.py  test_structure_info.py  test_sync_chain.py  test_sync_conn.py  test_sync_entity.py  test_sync_modres.py  test_sync_scheme.py  test_sync_utils.py
