[project]
name = "mmcif-restore"
version = "0.1.0"
description = "Restore mmCIF categories from reference CIF to edited structures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gemmi>=0.7.0",
    "typer>=0.15.0",
]

[project.scripts]
mmcif-restore = "mmcif_restore.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmcif_restore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
